--- a/client/css/Toolbar/Toolbar.css
+++ b/client/css/Toolbar/Toolbar.css
@@ -3,22 +3,24 @@
  * 
  * Author: Robert Kereskenyi
  */
-.webgme-toolbar .toolbar-group {
-  display: inline-block;
-  margin-left: 5px;
-  top: 2px;
-  position: relative; }
-  .webgme-toolbar .toolbar-group .separator {
-    margin-left: 2px;
+.webgme-toolbar {
+  padding-top: 2px; }
+  .webgme-toolbar .toolbar-button {
+    display: inline-block;
+    margin-left: 3px;
+    position: relative; }
+    .webgme-toolbar .toolbar-button .btn-mini [class^="icon-"],
+    .webgme-toolbar .toolbar-button .btn-mini [class*=" icon-"] {
+      margin-top: 0px; }
+  .webgme-toolbar .separator {
+    margin-left: 5px;
     margin-right: 2px;
-    /*background-color: #000000;*/
-    width: 15px;
-    height: 1px;
-    display: inline-block; }
-  .webgme-toolbar .toolbar-group .btn-mini [class^="icon-"],
-  .webgme-toolbar .toolbar-group .btn-mini [class*=" icon-"] {
-    margin-top: 0px; }
-  .webgme-toolbar .toolbar-group > .btn-mini {
-    margin-left: 2px; }
-  .webgme-toolbar .toolbar-group > :first-child {
-    margin-left: 0px; }
+    background-color: #CCCCCC;
+    width: 1px;
+    height: 19px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: 1px; }
+  .webgme-toolbar .btn-group {
+    margin-left: 3px; }
