--- a/client/css/Controls/iCheckBox.css
+++ b/client/css/Controls/iCheckBox.css
@@ -8,14 +8,14 @@ div.iCheckBox {
   background: -moz-linear-gradient(top, #cbcbcb, white);
   background: -webkit-linear-gradient(top, #cbcbcb, white);
   background: -o-linear-gradient(top, #cbcbcb, white);
-  background: -linear-gradient(top, #cbcbcb, white); }
+  background: linear-gradient(to bottom, #cbcbcb, white); }
   div.iCheckBox .sw {
     width: 26.6px;
     height: 16px;
     background: -moz-linear-gradient(top, #d4d4d4, white);
     background: -webkit-linear-gradient(top, #d4d4d4, white);
     background: -o-linear-gradient(top, #d4d4d4, white);
-    background: -linear-gradient(top, #d4d4d4, white);
+    background: linear-gradient(to bottom, #d4d4d4, white);
     border-radius: 3px;
     display: inline-block;
     position: absolute;
@@ -41,7 +41,7 @@ div.iCheckBox {
     background: -moz-linear-gradient(top, #0787bd, #5bbce6);
     background: -webkit-linear-gradient(top, #0787bd, #5bbce6);
     background: -o-linear-gradient(top, #0787bd, #5bbce6);
-    background: -linear-gradient(top, #0787bd, #5bbce6); }
+    background: linear-gradient(to bottom, #0787bd, #5bbce6); }
     div.iCheckBox.checked .sw {
       left: 31.4px; }
     div.iCheckBox.checked .txt {
