--- a/client/scss/Toolbar/Toolbar.scss
+++ b/client/scss/Toolbar/Toolbar.scss
@@ -9,6 +9,7 @@ $toolbar-separator-margin: 5px;
 
 .webgme-toolbar {
   padding-top: 2px;
+  white-space: nowrap;
 
   .toolbar-button {
     display: inline-block;
