global toolbar update #4

--- a/client/css/bootstrap_webgme_ext.css
+++ b/client/css/bootstrap_webgme_ext.css
@@ -192,6 +192,10 @@ ul.dropdown-menu {
     overflow: auto;
 }
 
+.dropdown-menu.no-min-width {
+    min-width: 0;
+}
+
 
 .input-append .add-on.add-on-mini,
 .input-prepend .add-on.add-on-mini {
