--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -7,6 +7,7 @@ $padding: 3px;
 $background-color: #ECECEC;
 $box-shadow: 0px 0px 7px 0px #444 inset;
 $selected-background-color: #DBEAFC;
+$selected-box-shadow: 0px 0px 7px 0px #1276D4 inset;
 $selected-border: 1px solid #52A8EC;
 $ports-background-color: #000000;
 $left-ports-background-color: rgba(255, 255, 0, 0.5);
@@ -17,6 +18,7 @@ $ports-separator-width: 15px;
 $accept-droppable-background-color: #00FF00;
 $ref-hover-background-color: rgba(82, 168, 236, 0.8);
 $ref-hover-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+$model-name-height: 16px;
 
 @mixin model_decorator_core {
   .model-decorator {
@@ -41,6 +43,8 @@ $ref-hover-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 2
       text-overflow: ellipsis;
       width: $ports-width * 2 + $ports-separator-width + $padding * 2;
       border-bottom: 1px solid #000000;
+      height: $model-name-height;
+      line-height: $model-name-height;
     }
 
     .ports {
