--- a/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.scss
+++ b/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.scss
@@ -64,5 +64,8 @@
   .model-decorator {
     border: $selected-border;
     background-color: $selected-background-color;
+    -webkit-box-shadow: $selected-box-shadow;
+    -moz-box-shadow: $selected-box-shadow;
+    box-shadow: $selected-box-shadow;
   }
 }
