--- a/client/css/PanelBase/PanelBaseWithHeader.css
+++ b/client/css/PanelBase/PanelBaseWithHeader.css
@@ -1,22 +1,31 @@
 .panel-base-wh {
   box-sizing: border-box; }
+  .panel-base-wh .ro-icon {
+    display: none;
+    margin-right: 2px;
+    position: absolute;
+    top: 2px;
+    left: 2px; }
   .panel-base-wh .panel-header {
-    padding: 5px;
-    height: 28px;
+    height: 0px;
     background-color: #efefef;
-    border-bottom: 2px solid rgba(0, 0, 0, 0);
+    border-bottom: 3px solid rgba(0, 0, 0, 0);
     /*overflow: visible;
     overflow-x: hidden;*/
-    white-space: nowrap; }
-    .panel-base-wh .panel-header .ro-icon {
+    white-space: nowrap;
+    /*.ro-icon {
       display: none;
-      margin-right: 2px; }
+      margin-right: 2px;
+      position: absolute;
+    }*/ }
     .panel-base-wh .panel-header .panel-header-title {
-      font-size: 20px;
+      font-size: 14px;
+      line-height: 14px;
       font-weight: bold;
       display: inline-block;
       margin-right: 10px;
-      margin-left: 10px; }
+      margin-left: 5px;
+      white-space: nowrap; }
     .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group {
       margin-left: 10px; }
       .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group.toolbar-group-small-margin {
@@ -38,16 +47,53 @@
       margin-left: 10px; }
     .panel-base-wh .panel-header .panel-header-toolbar ul.dropdown-menu .iCheckBox {
       top: 1px; }
+    .panel-base-wh .panel-header.absolute-header {
+      border-bottom-width: 0px;
+      position: absolute;
+      top: 0px;
+      left: 0px; }
   .panel-base-wh .panel-body {
     position: relative;
     overflow: auto;
     background-color: white; }
-  .panel-base-wh.read-only .panel-header .ro-icon {
+  .panel-base-wh .floating-title {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: white;
+    border-bottom-right-radius: 10px;
+    -webkit-box-shadow: 0px 0px 5px 2px #cccccc;
+    -moz-box-shadow: 0px 0px 5px 2px #cccccc;
+    box-shadow: 0px 0px 5px 2px #cccccc; }
+    .panel-base-wh .floating-title .ro-icon {
+      position: relative;
+      top: -1px;
+      left: 2px; }
+    .panel-base-wh .floating-title .panel-header-title {
+      font-size: 14px;
+      line-height: 14px;
+      font-weight: bold;
+      display: inline-block;
+      margin-right: 10px;
+      margin-left: 5px;
+      white-space: nowrap;
+      margin-top: 3px; }
+  .panel-base-wh.read-only .ro-icon {
     display: inline-block; }
   .panel-base-wh.read-only .panel-body {
     background-color: #fbfbfb; }
+  .panel-base-wh.read-only .floating-title {
+    background-color: #fbfbfb; }
   .panel-base-wh.active-panel .panel-header {
     border-bottom-color: rgba(82, 168, 236, 0.8); }
+  .panel-base-wh.active-panel .floating-title {
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
+    box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8); }
+  .panel-base-wh.active-panel .absolute-header {
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
+    box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8); }
 
 .side-panel .panel-base-wh {
   position: relative;
@@ -60,9 +106,13 @@
   background-color: whitesmoke; }
   .side-panel .panel-base-wh .panel-header {
     padding: 3px;
-    height: 16px;
+    height: 15px;
     background-color: whitesmoke;
-    border-bottom: 2px solid rgba(0, 0, 0, 0); }
+    border-bottom: 3px solid rgba(0, 0, 0, 0); }
+    .side-panel .panel-base-wh .panel-header .ro-icon {
+      position: relative;
+      top: 0px;
+      left: 0px; }
     .side-panel .panel-base-wh .panel-header .panel-header-title {
       font-size: 11px;
       line-height: 18px;
