--- a/client/scss/PanelBase/PanelBaseWithHeader.scss
+++ b/client/scss/PanelBase/PanelBaseWithHeader.scss
@@ -12,15 +12,38 @@ $sidepane-panel-body-background-color-read-only: #FBFBFB;
 $sidepane-panel-border-color: #E9E9E9;
 $sidepane-panel-border-radius: 4px;
 
-$panel-header-height: 30px;
+$panel-header-height: 3px;
 $side-panel-header-height: 18px;
-$panel-border-bottom-width: 2px;
+$panel-border-bottom-width: 3px;
+
+$floating-box-shadow: 0px 0px 5px 2px #CCC;
+$active-floating-box-shadow: 0px 0px 5px 2px $panel-header-active-background-color;
+
+$title-font-size: 14px;
+
+@mixin panel_header_title {
+  font-size: $title-font-size;
+  line-height: $title-font-size;
+  font-weight: bold;
+  display: inline-block;
+  margin-right: 10px;
+  margin-left: 5px;
+  white-space: nowrap;
+}
 
 .panel-base-wh {
   box-sizing: border-box;
 
+  .ro-icon {
+    display: none;
+    margin-right: 2px;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+  }
+
   .panel-header {
-    padding: 5px;
+    //padding: 5px;
     height: $panel-header-height - $panel-border-bottom-width;
     background-color: $panel-header-background-color;
     border-bottom: $panel-border-bottom-width solid rgba(0, 0, 0, 0);
@@ -28,17 +51,14 @@ $panel-border-bottom-width: 2px;
     overflow-x: hidden;*/
     white-space: nowrap;
 
-    .ro-icon {
+    /*.ro-icon {
       display: none;
       margin-right: 2px;
-    }
+      position: absolute;
+    }*/
 
     .panel-header-title {
-      font-size: 20px;
-      font-weight: bold;
-      display: inline-block;
-      margin-right: 10px;
-      margin-left: 10px;
+      @include panel_header_title;
     }
 
     .panel-header-toolbar {
@@ -83,6 +103,13 @@ $panel-border-bottom-width: 2px;
         }
       }
     }
+
+    &.absolute-header {
+      border-bottom-width: 0px;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
   }
 
   .panel-body {
@@ -91,14 +118,38 @@ $panel-border-bottom-width: 2px;
     background-color: $panel-body-background-color;
   }
 
+  .floating-title {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: $panel-body-background-color;
+    border-bottom-right-radius: 10px;
+    -webkit-box-shadow: $floating-box-shadow;
+    -moz-box-shadow: $floating-box-shadow;
+    box-shadow: $floating-box-shadow;
+
+    .ro-icon {
+      position: relative;
+      top: -1px;
+      left: 2px;
+    }
+
+    .panel-header-title {
+      @include panel_header_title;
+      margin-top: 3px;
+    }
+  }
+
   &.read-only {
-    .panel-header {
-      .ro-icon {
-        display: inline-block;
-      }
+    .ro-icon {
+      display: inline-block;
     }
 
     .panel-body {
+      background-color: $panel-body-background-color-read-only;
+    }
+
+    .floating-title {
       background-color: $panel-body-background-color-read-only;
     }
   }
@@ -106,6 +157,18 @@ $panel-border-bottom-width: 2px;
   &.active-panel {
     .panel-header {
       border-bottom-color: $panel-header-active-background-color;
+    }
+
+    .floating-title {
+      -webkit-box-shadow: $active-floating-box-shadow;
+      -moz-box-shadow: $active-floating-box-shadow;
+      box-shadow: $active-floating-box-shadow;
+    }
+
+    .absolute-header {
+      -webkit-box-shadow: $active-floating-box-shadow;
+      -moz-box-shadow: $active-floating-box-shadow;
+      box-shadow: $active-floating-box-shadow;
     }
   }
 }
@@ -130,6 +193,12 @@ $panel-border-bottom-width: 2px;
       height: $side-panel-header-height - $panel-border-bottom-width;
       background-color: $sidepane-panel-header-background-color;
       border-bottom: $panel-border-bottom-width solid rgba(0, 0, 0, 0);
+
+      .ro-icon {
+        position: relative;
+        top: 0px;
+        left: 0px;
+      }
 
       .panel-header-title {
         font-size: 11px;
