--- a/client/scss/Widgets/GraphViz/GraphVizWidget.scss
+++ b/client/scss/Widgets/GraphViz/GraphVizWidget.scss
@@ -25,3 +25,9 @@ $link-stroke-color: #CCC;
     stroke-width: 1.5px;
   }
 }
+
+div.css-zoom.graph-viz-zoom {
+  position: absolute;
+  top: 30px;
+  left: 10px;
+}
