--- a/client/css/Widgets/MetaEditor/MetaEditorWidget.css
+++ b/client/css/Widgets/MetaEditor/MetaEditorWidget.css
@@ -1,7 +1,7 @@
 div.filterPanel {
   position: absolute;
-  top: 60px;
-  left: 25px;
+  top: 5px;
+  right: 11px;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 6px;
