--- a/client/decorators/UMLStateMachineDecorator/Core/_Colors.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_Colors.scss
@@ -1,8 +1,8 @@
-/*
- * Copyright (C) 2013 Vanderbilt University, All rights reserved.
- * 
- * Author: Robert Kereskenyi
- */
+//
+// Copyright (C) 2013 Vanderbilt University, All rights reserved.
+// 
+// Author: Robert Kereskenyi
+//
 
 $selected-background-color: #DBEAFC;
 $selected-border-color: #52A8EC;
