--- a/client/decorators/UMLStateMachineDecorator/Core/_UMLStateMachineDecoratorCore.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_UMLStateMachineDecoratorCore.scss
@@ -1,8 +1,8 @@
-/*
- * Copyright (C) 2013 Vanderbilt University, All rights reserved.
- * 
- * Author: Robert Kereskenyi
- */
+//
+// Copyright (C) 2013 Vanderbilt University, All rights reserved.
+// 
+// Author: Robert Kereskenyi
+//
 
 //imports
 @import "_State";
