update name position

--- a/client/decorators/UMLStateMachineDecorator/Core/_EndState.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_EndState.scss
@@ -42,6 +42,7 @@ $end-state-internal-border-radius: 10px;
       white-space: nowrap;
       position: relative;
       top: $end-state-internal-size;
+      left: 50%;
     }
 
     .connector {
