--- a/client/decorators/UMLStateMachineDecorator/Core/_InitialState.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_InitialState.scss
@@ -24,6 +24,7 @@ $initial-state-border-radius: 15px;
     	white-space: nowrap;
     	position: relative;
     	top: $initial-state-size;
+        left: 50%;
     }
 
     .connector {
