UMLStateMachineDecorator for PartBrowser

--- a/client/decorators/UMLStateMachineDecorator/Core/_UMLStateMachineDecoratorCore.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_UMLStateMachineDecoratorCore.scss
@@ -16,6 +16,8 @@
 
 @mixin UMLStateMachine_decorator_core {
   .uml-state-machine {
+    position: relative;
+
     @include InitialState;
     @include EndState;
     @include State;
