--- a/client/decorators/UMLStateMachineDecorator/Core/_EndState.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_EndState.scss
@@ -17,51 +17,73 @@ $end-state-internal-border-radius: 10px;
 
 @mixin EndState {
   .end-state {
-    background-color: $end-state-background-color;
-    border: $end-state-border;
-    width: $end-state-size;
-    height: $end-state-size;
-    border-radius: $end-state-border-radius;
-    box-sizing: border-box;
-
-    div.inner {
-      background-color: $end-state-color;
-      width: $end-state-internal-size;
-      height: $end-state-internal-size;
-      border-radius: $end-state-internal-border-radius;
-      position: relative;
-      top: 50%;
-      left: 50%;
-      margin-left: $end-state-internal-size / -2;
-      margin-top: $end-state-internal-size / -2;
-      border: 2px solid $initial-state-background-color;
+    .icon {
+      background-color: $end-state-background-color;
+      border: $end-state-border;
+      width: $end-state-size;
+      height: $end-state-size;
+      border-radius: $end-state-border-radius;
       box-sizing: border-box;
+
+      div.inner {
+        background-color: $end-state-color;
+        width: $end-state-internal-size;
+        height: $end-state-internal-size;
+        border-radius: $end-state-internal-border-radius;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        margin-left: $end-state-internal-size / -2;
+        margin-top: $end-state-internal-size / -2;
+        border: 2px solid $initial-state-background-color;
+        box-sizing: border-box;
+      }
     }
+
 
     .name {
       white-space: nowrap;
-      position: relative;
-      top: $end-state-internal-size;
+      position: absolute;
+      margin-left: 0px;
       left: 50%;
     }
 
     .connector {
       @include connector_basics;
 
-      margin-left: $connector-size / -2;
-      left: 50%;
-      margin-top: $connector-size / -2;
-      top: 50%;
+      &.left {
+        top: ( $end-state-size - $connector-size ) / 2;
+        left: 0;
+      }
+
+      &.right {
+        top: ( $end-state-size - $connector-size ) / 2;
+        left: $end-state-size;
+      }
+
+      &.top {
+        top: $connector-size / -2;
+        margin-left: $connector-size / -2;
+        left: 50%;
+      }
+
+      &.bottom {
+        top: $end-state-size - $connector-size / 2;
+        margin-left: $connector-size / -2;
+        left: 50%;
+      }
     }
   }
 }
 
 @mixin SelectedEndState {
   .end-state {
-    border-color: $selected-border-color;
-
-    div.inner {
+    .icon {
       border-color: $selected-border-color;
+
+      div.inner {
+        border-color: $selected-border-color;
+      }
     }
   }
 }
