--- a/client/decorators/UMLStateMachineDecorator/Core/_InitialState.scss
+++ b/client/decorators/UMLStateMachineDecorator/Core/_InitialState.scss
@@ -10,36 +10,58 @@
 $initial-state-background-color: #000000;
 $initial-state-size: 20px;
 $initial-state-border-radius: 15px;
+$connector-diff: -2px;
 
 @mixin InitialState {
   .initial-state {
-  	background-color: $initial-state-background-color;
-    width: $initial-state-size;
-    height: $initial-state-size;
-    border-radius: $initial-state-border-radius;
-    border: 2px solid $initial-state-background-color;
-    box-sizing: border-box;
+    .icon {
+      background-color: $initial-state-background-color;
+      width: $initial-state-size;
+      height: $initial-state-size;
+      border-radius: $initial-state-border-radius;
+      border: 2px solid $initial-state-background-color;
+      box-sizing: border-box;
+    }
 
     .name {
     	white-space: nowrap;
-    	position: relative;
-    	top: $initial-state-size;
+        position: absolute;
+        margin-left: 0px;
         left: 50%;
     }
 
     .connector {
-	    @include connector_basics;
+      @include connector_basics;
 
-	    margin-left: $connector-size / -2;
-	    left: 50%;
-	    margin-top: $connector-size / -2;
-	    top: 50%;
-  	}
+      &.left {
+        top: ( $initial-state-size - $connector-size ) / 2;
+        left: $connector-diff;
+      }
+
+      &.right {
+        top: ( $initial-state-size - $connector-size ) / 2;
+        left: $initial-state-size - $connector-diff;
+      }
+
+      &.top {
+        top: $connector-size / -2 + $connector-diff;
+        margin-left: $connector-size / -2;
+        left: 50%;
+      }
+
+      &.bottom {
+        top: $initial-state-size - $connector-size / 2 - $connector-diff;
+        margin-left: $connector-size / -2;
+        left: 50%;
+      }
+    }
   }
 }
 
 @mixin SelectedInitialState {
   .initial-state {
-    border-color: $selected-border-color;
+    .icon {
+      border-color: $selected-border-color;
+    }
   }
 }
