--- a/client/decorators/UMLStateMachineDecorator/PartBrowser/UMLStateMachineDecorator.PartBrowserWidget.scss
+++ b/client/decorators/UMLStateMachineDecorator/PartBrowser/UMLStateMachineDecorator.PartBrowserWidget.scss
@@ -3,3 +3,9 @@
  * 
  * Author: Robert Kereskenyi
  */
+
+//imports
+@import "../Core/_UMLStateMachineDecoratorCore";
+
+//include ModelDecoratorCore style
+@include UMLStateMachine_decorator_core;
