--- a/client/css/Toolbar/Toolbar.css
+++ b/client/css/Toolbar/Toolbar.css
@@ -3,17 +3,22 @@
  * 
  * Author: Robert Kereskenyi
  */
-.webgme-toolbar {
+.webgme-toolbar,
+.webgme-toolbar-ext {
   padding-top: 2px;
   white-space: nowrap; }
-  .webgme-toolbar .toolbar-button {
+  .webgme-toolbar .toolbar-button,
+  .webgme-toolbar-ext .toolbar-button {
     display: inline-block;
     margin-left: 3px;
     position: relative; }
     .webgme-toolbar .toolbar-button .btn-mini [class^="icon-"],
-    .webgme-toolbar .toolbar-button .btn-mini [class*=" icon-"] {
+    .webgme-toolbar .toolbar-button .btn-mini [class*=" icon-"],
+    .webgme-toolbar-ext .toolbar-button .btn-mini [class^="icon-"],
+    .webgme-toolbar-ext .toolbar-button .btn-mini [class*=" icon-"] {
       margin-top: 0px; }
-  .webgme-toolbar .separator {
+  .webgme-toolbar .separator,
+  .webgme-toolbar-ext .separator {
     margin-left: 5px;
     margin-right: 2px;
     background-color: #CCCCCC;
@@ -23,16 +28,21 @@
     vertical-align: middle;
     position: relative;
     top: 1px; }
-  .webgme-toolbar .btn-group {
+  .webgme-toolbar .btn-group,
+  .webgme-toolbar-ext .btn-group {
     margin-left: 3px; }
-  .webgme-toolbar .toolbar-input {
+  .webgme-toolbar .toolbar-input,
+  .webgme-toolbar-ext .toolbar-input {
     display: inline-block;
     margin-left: 3px;
     position: relative; }
     .webgme-toolbar .toolbar-input .input-append,
-    .webgme-toolbar .toolbar-input .input-prepend {
+    .webgme-toolbar .toolbar-input .input-prepend,
+    .webgme-toolbar-ext .toolbar-input .input-append,
+    .webgme-toolbar-ext .toolbar-input .input-prepend {
       margin-bottom: 0; }
-  .webgme-toolbar .toolbar-label {
+  .webgme-toolbar .toolbar-label,
+  .webgme-toolbar-ext .toolbar-label {
     display: inline-block;
     margin-left: 3px;
     position: relative;
@@ -40,10 +50,51 @@
     line-height: 22px;
     height: 22px;
     vertical-align: middle; }
-  .webgme-toolbar .toolbar-checkbox {
+  .webgme-toolbar .toolbar-checkbox,
+  .webgme-toolbar-ext .toolbar-checkbox {
     display: inline-block;
     margin-left: 3px;
     position: relative;
     vertical-align: middle; }
-  .webgme-toolbar .dropdown-menu li .iCheckBox {
+  .webgme-toolbar .dropdown-menu li .iCheckBox,
+  .webgme-toolbar-ext .dropdown-menu li .iCheckBox {
     top: 1px; }
+
+.webgme-toolbar-ext {
+  position: absolute;
+  right: 0px;
+  margin-top: 1px;
+  padding: 3px;
+  padding-left: 0;
+  padding-top: 0;
+  background: whitesmoke;
+  border: 1px solid #bbbbbb;
+  display: none;
+  white-space: normal; }
+  .webgme-toolbar-ext.shown {
+    display: inline-block; }
+  .webgme-toolbar-ext > div {
+    margin-top: 2px; }
+
+.webgme-toolbar-ext-toggle {
+  display: inline-block;
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  background-color: whitesmoke;
+  height: 22px;
+  width: 7px;
+  cursor: pointer; }
+  .webgme-toolbar-ext-toggle:hover {
+    background-color: #e6e6e6; }
+  .webgme-toolbar-ext-toggle > i {
+    -webkit-transform: scale(0.5, 0.5);
+    -moz-transform: scale(0.5, 0.5);
+    -ms-transform: scale(0.5, 0.5);
+    -o-transform: scale(0.5, 0.5);
+    transform: scale(0.5, 0.5);
+    position: absolute;
+    top: 8px;
+    left: -3px; }
+  .webgme-toolbar-ext-toggle > i:last-child {
+    top: 11px; }
