--- a/client/scss/Toolbar/Toolbar.scss
+++ b/client/scss/Toolbar/Toolbar.scss
@@ -7,7 +7,12 @@
 $toolbar-item-margin-left: 3px;
 $toolbar-separator-margin: 5px;
 
-.webgme-toolbar {
+$webgme-toolbar-ext-background-color: #F5F5F5;
+$webgme-toolbar-ext-border-color: rgb(187, 187, 187);
+$webgme-toolbar-ext-toggle-hover-background-color: #E6E6E6;
+
+.webgme-toolbar,
+.webgme-toolbar-ext {
   padding-top: 2px;
   white-space: nowrap;
 
@@ -74,5 +79,57 @@ $toolbar-separator-margin: 5px;
         top: 1px;
       }
     }
+  }
+}
+
+.webgme-toolbar-ext {
+  position: absolute;
+  right: 0px;
+  margin-top: 1px;
+  padding: 3px;
+  padding-left: 0;
+  padding-top: 0;
+  background: $webgme-toolbar-ext-background-color;
+  border: 1px solid $webgme-toolbar-ext-border-color;
+  display: none;
+  white-space: normal;
+
+  &.shown {
+    display: inline-block;
+  }
+
+  > div {
+    margin-top: 2px;
+  }
+}
+
+.webgme-toolbar-ext-toggle {
+  display: inline-block;
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  background-color: $webgme-toolbar-ext-background-color;
+  height: 22px;
+  width: 7px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $webgme-toolbar-ext-toggle-hover-background-color;
+  }
+
+  > i {
+    -webkit-transform: scale(0.5, 0.5);
+    -moz-transform: scale(0.5, 0.5);
+    -ms-transform: scale(0.5, 0.5);
+    -o-transform: scale(0.5, 0.5);
+    transform: scale(0.5, 0.5);
+
+    position: absolute;
+    top: 8px;
+    left: -3px;
+  }
+
+  >i:last-child {
+    top: 11px;
   }
 }
