--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -258,3 +258,7 @@ div.css-zoom.diagram-designer-zoom {
   top: 30px;
   left: 10px;
 }
+
+div.diagram-designer-drag-outline {
+  white-space: nowrap;
+}
