--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -19,6 +19,7 @@ $accept-droppable-background-color: #00FF00;
 $ref-hover-background-color: rgba(82, 168, 236, 0.8);
 $ref-hover-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 $model-name-height: 16px;
+$abstract-class-name-color: #AAAAAA;
 
 @mixin model_decorator_core {
   .model-decorator {
@@ -112,6 +113,13 @@ $model-name-height: 16px;
       [class^="icon-"],
       [class*=" icon-"] {
         margin-top: -2px;
+      }
+    }
+
+    &.abstract {
+      .name {
+        font-style:italic;
+        color: $abstract-class-name-color;
       }
     }
   }
