--- a/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
+++ b/client/decorators/ModelDecorator/PartBrowser/ModelDecorator.PartBrowserWidget.css
@@ -102,3 +102,6 @@
     .model-decorator .ref [class^="icon-"],
     .model-decorator .ref [class*=" icon-"] {
       margin-top: -2px; }
+  .model-decorator.abstract .name {
+    font-style: italic;
+    color: #aaaaaa; }
