--- a/client/css/Widgets/MetaEditor/MetaEditorWidget.css
+++ b/client/css/Widgets/MetaEditor/MetaEditorWidget.css
@@ -1,6 +1,6 @@
 div.filterPanel {
   position: absolute;
-  top: 5px;
+  top: 30px;
   right: 11px;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -34,3 +34,36 @@ div.filterPanel {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
   div.filterPanel:hover .body {
     display: block; }
+
+.sheets-container {
+  position: absolute;
+  top: 2px;
+  width: 100%;
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding-top: 2px; }
+  .sheets-container > div {
+    display: table-cell;
+    vertical-align: middle;
+    white-space: nowrap; }
+  .sheets-container div.add-sheet-container {
+    border-bottom: 1px solid #ddd;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-bottom: 2px; }
+  .sheets-container div.add-sheet-container > div {
+    display: inline-block;
+    margin-right: 3px; }
+  .sheets-container div.sheet-list-container {
+    width: 100%;
+    overflow: hidden; }
+    .sheets-container div.sheet-list-container ul.nav {
+      position: relative;
+      margin-bottom: 0px; }
+      .sheets-container div.sheet-list-container ul.nav.nav-tabs > li {
+        display: inline-block;
+        float: none; }
+        .sheets-container div.sheet-list-container ul.nav.nav-tabs > li > a {
+          padding-top: 5px;
+          padding-bottom: 5px;
+          line-height: 13px; }
