refactor Projects dialog's layout

--- a/client/css/Dialogs/Projects/ProjectsDialog.css
+++ b/client/css/Dialogs/Projects/ProjectsDialog.css
@@ -3,6 +3,11 @@
  * 
  * Author: Robert Kereskenyi
  */
-.tabContainer ul.nav.nav-tabs li {
-  width: 86px;
-  text-align: center; }
+.pre-body {
+  padding: 15px;
+  padding-bottom: 0px; }
+  .pre-body .tabContainer ul.nav.nav-tabs {
+    margin-bottom: 0px; }
+    .pre-body .tabContainer ul.nav.nav-tabs li {
+      width: 86px;
+      text-align: center; }
