update sidepanel padding values

--- a/client/css/PanelBase/PanelBaseWithHeader.css
+++ b/client/css/PanelBase/PanelBaseWithHeader.css
@@ -124,7 +124,10 @@
       display: block; }
   .side-panel .panel-base-wh .panel-body {
     background-color: whitesmoke;
-    padding: 3px; }
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 0px;
+    padding-right: 0px; }
   .side-panel .panel-base-wh.read-only .panel-body {
     background-color: #fbfbfb; }
   .side-panel .panel-base-wh.active-panel .panel-header {
