--- a/client/css/Panels/Visualizer/VisualizerPanel.css
+++ b/client/css/Panels/Visualizer/VisualizerPanel.css
@@ -1,9 +1,12 @@
 .visualizer-panel .vis-loader {
   display: inline-block;
   vertical-align: middle;
-  margin-left: 7px; }
-.visualizer-panel > ul {
+  margin-left: 7px;
+  margin-top: -3px; }
+.visualizer-panel ul.nav {
   margin-bottom: 0; }
+  .visualizer-panel ul.nav li > a {
+    white-space: nowrap; }
 .visualizer-panel .pp {
   text-align: center;
   font-size: 11px;
