--- a/client/scss/Panels/Visualizer/VisualizerPanel.scss
+++ b/client/scss/Panels/Visualizer/VisualizerPanel.scss
@@ -3,10 +3,16 @@
     display: inline-block;
     vertical-align: middle;
     margin-left: 7px;
+    margin-top: -3px;
   }
   
-  > ul {
+  ul.nav {
     margin-bottom: 0;
+    li {
+      > a {
+        white-space: nowrap;
+      }
+    }
   }
 
   .pp {
